Update MCP documentation content
- Enhance examples documentation with improved content and formatting
- Further refine installation guide for better user experience

--- a/mcp/examples.mdx
+++ b/mcp/examples.mdx
@@ -308,7 +308,7 @@ asyncio.run(run_test())
 
 TestSprite automatically generates a comprehensive test report that provides detailed insights about performance and quality. 
 <Frame>
-  <img src="../images/report.png" alt="report" style={{ width: '100%', height: 'auto', borderRadius: '8px' }} />
+  <img src="../images/report.png"  alt="Report" />
 </Frame>
 <br />
 <Accordion title="View Full Sample Test Report ">
