--- a/mcp/installation.mdx
+++ b/mcp/installation.mdx
@@ -45,7 +45,7 @@ First, you'll need a TestSprite API key for any installation method:
 1. Get your [**API key**](#get-your-api-key). 
 2. In Trae, navigate to `AI Sidebar > AI Management`.
   <Frame>
-    <img src="../images/trae.png" alt="Cursor Success" style={{ width: '100%', height: 'auto', borderRadius: '8px' }} />
+    <img src="../images/trae.png"  alt="trae" />
   </Frame>
 3. Select `MCP > Add > Add from Marketplace`.
 4. Search for **TestSprite** and add to your MCP list.
@@ -88,7 +88,7 @@ The easiest way to install TestSprite MCP Server in Cursor:
     ```
     5. Check if the green dot shows up on the TestSprite MCP server icon, and the tools have been loaded successfully.
     <Frame>
-      <img src="../images/cursorSuccess.png" alt="Cursor Success" style={{ width: '100%', height: 'auto', borderRadius: '8px' }} />
+      <img src="../images/cursorSuccess.png"  alt="Cursor Success" />
     </Frame>
   </Tab>
 
