--- a/mcp/overview.mdx
+++ b/mcp/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Overview"
 description: "The No-Code, No-Prompt Testing Agent That Makes Your Software Work"
-icon: "microchip"
+icon: "file"
 ---
 
 TestSprite MCP Server transforms your IDE's AI assistant into an intelligent testing agent that can automatically test, debug, and fix your code. No manual test writing, no complex prompts, no testing expertise required.
