Update documentation: MCP tools, workflow, examples, and troubleshooting guides

--- a/troubleshooting/ide-configuration-issues.mdx
+++ b/troubleshooting/ide-configuration-issues.mdx
@@ -1,5 +1,5 @@
 ---
-title: "IDE Configuration"
+title: "IDE Configuration Issues"
 description: "Solutions to IDE configuration problems with TestSprite MCP Server."
 ---
 
