--- a/troubleshooting/installation-issues.mdx
+++ b/troubleshooting/installation-issues.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Installation"
+title: "Installation Issues"
 description: "Solutions to common installation problems with TestSprite MCP Server."
 ---
 
