--- a/troubleshooting/application-detection-issues.mdx
+++ b/troubleshooting/application-detection-issues.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Application Detection"
+title: "Application Detection Issues"
 description: "Solutions to application detection problems with TestSprite MCP Server."
 ---
 
