--- a/troubleshooting/test-execution-issues.mdx
+++ b/troubleshooting/test-execution-issues.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Test Execution"
+title: "Test Execution Issues"
 description: "Solutions to test execution problems with TestSprite MCP Server."
 ---
 
