--- a/mcp/overview.mdx
+++ b/mcp/overview.mdx
@@ -21,7 +21,7 @@ Help me test this project with TestSprite.
 
 That's it. Just drag your project folder into the chat, and TestSprite MCP Server handles the rest.
 
-<Accordion title="How TestSprite Works in 8 Simple Steps">
+<Accordion title="How TestSprite Works in 8 Simple Steps" defaultOpen={true}>
 <Steps>
   <Step title="Reads User PRD">
     Understands your product requirements and goals.
@@ -67,7 +67,7 @@ That's it. Just drag your project folder into the chat, and TestSprite MCP Serve
     With traditional testing, you're stuck **writing test cases manually**, **setting up complex frameworks**, **debugging failures by hand**, **running tests separately** from development, and dealing with **limited coverage** that misses critical edge cases.
   </Card>
   <Card title="TestSprite MCP Server" icon="sparkles">
-    With TestSprite MCP Server, **AI generates test cases automatically** with **zero setup required**, **analyzes and fixes issues** for you, stays **integrated into your coding workflow**, and provides **comprehensive automated coverage**.
+    With TestSprite MCP Server, **AI generates test cases automatically** with almost **zero setup required**, **analyzes and fixes issues** for you, stays **integrated into your coding workflow**, and provides **comprehensive automated coverage**.
   </Card>
 </Columns>
 
