Update MCP installation documentation and add new image assets

--- a/mcp/installation.mdx
+++ b/mcp/installation.mdx
@@ -42,15 +42,17 @@ First, you'll need a TestSprite API key for any installation method:
 <Tabs>
 <Tab title="Trae">
 
-1. Get your [**API key**](#get-your-api-key). 
-2. In Trae, navigate to `AI Sidebar > AI Management`.
   <Frame>
     <img src="../images/trae.png"  alt="trae" />
   </Frame>
+
+1. Get your [**API key**](#get-your-api-key). 
+2. In Trae, navigate to `AI Sidebar > AI Management`.
 3. Select `MCP > Add > Add from Marketplace`.
 4. Search for **TestSprite** and add to your MCP list.
 5. **Enter your API key** in Trae.
-6. Hit **Confirm** and start testing.
+6. Hit **Confirm**
+7. Select **Builder with MCP** and start testing.
 </Tab>
 <Tab title="Cursor">
 The easiest way to install TestSprite MCP Server in Cursor:
