--- a/mcp/installation.mdx
+++ b/mcp/installation.mdx
@@ -50,9 +50,8 @@ First, you'll need a TestSprite API key for any installation method:
 2. In Trae, navigate to `AI Sidebar > AI Management`.
 3. Select `MCP > Add > Add from Marketplace`.
 4. Search for **TestSprite** and add to your MCP list.
-5. **Enter your API key** in Trae.
-6. Hit **Confirm**
-7. Select **Builder with MCP** and start testing.
+5. **Enter your API key** in Trae and hit **Confirm**
+6. Select **Builder with MCP** and start testing.
 </Tab>
 <Tab title="Cursor">
 The easiest way to install TestSprite MCP Server in Cursor:
