Update MCP installation documentation and add marketplace image

--- a/mcp/installation.mdx
+++ b/mcp/installation.mdx
@@ -50,6 +50,9 @@ First, you'll need a TestSprite API key for any installation method:
 2. In Trae, navigate to `AI Sidebar > AI Management`.
 3. Select `MCP > Add > Add from Marketplace`.
 4. Search for **TestSprite** and add to your MCP list.
+  <Frame>
+    <img src="../images/trae-marketplace.png"  alt="trae" />
+  </Frame>
 5. **Enter your API key** in Trae and hit **Confirm**
 6. Select **Builder with MCP** and start testing.
 </Tab>
