Reorganize documentation structure: move MCP files to concepts/tutorials, add test maintenance guide, and update navigation

--- a/tutorials/demo-examples.mdx
+++ b/tutorials/demo-examples.mdx
@@ -1,5 +1,5 @@
 ---
-title: "MCP Examples"
+title: "Demo & Examples"
 description: "Real-world TestSprite MCP Server output from an actual e-commerce project test run."
 ---
 
