Update test maintenance documentation: improve formatting, add tabs structure, and include new frontend JSON image

--- a/mcp/test-maintenance.mdx
+++ b/mcp/test-maintenance.mdx
@@ -44,7 +44,7 @@ There are two different ways to regenerate tests depending on whether you want t
   <Frame>
     <img src="../images/test-plan.png"  alt="plan" />
   </Frame>
-    1. Open your TestSprite test plan file (e.g. `testsprite_test_plan.md`).
+    1. Open your TestSprite test plan file (e.g. `testsprite_frontend_test_plan.json`).
     2. Find the test case you want to change and edit the description. For example:
 
     ```md Before/After Example
@@ -96,7 +96,11 @@ There are two different ways to regenerate tests depending on whether you want t
 
 Sometimes you'll want to extend your suite with fresh test cases.
 
-1. Open the TestSprite test plan file. (`testsprite_frontend_test_plan.json`)
+  <Frame>
+  <img src="../images/frontend-json.png"  alt="plan" />
+  </Frame>
+
+1. Open the TestSprite test plan file. (e.g.`testsprite_frontend_test_plan.json`)
 2. Append new test cases at the end, following the same format as the existing ones.
 3. If you have test cases from another tool or platform, paste them in and make sure they follow the same style.
 <Note>You can also use AI IDEs like Cursor or Trae to help reformat them to match TestSprite's standard.</Note>
