Update test maintenance documentation with final refinements

--- a/mcp/test-maintenance.mdx
+++ b/mcp/test-maintenance.mdx
@@ -13,7 +13,7 @@ Sometimes you just want to re-run the same tests as the previous run—maybe to 
     In your coding IDE, simply type:  
 
     ```text Example Prompt
-    Hey, can you re-run existing TestSprite tests for me?
+    Help me rerun the testsprite_generate_code_and_execute tool.
     ```
 
     TestSprite will automatically detect your existing project test suite and execute all of the tests again. You'll see updated results directly in your IDE or TestSprite dashboard.
@@ -176,11 +176,11 @@ Rerun the xth test for me using testsprite_generate_code_and_execute
   <div className="table-cell" style={{ padding: '8px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>**Rerun**</div>
   <div className="table-cell" style={{ padding: '8px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Quick re-execution of existing tests</div>
   <div className="table-cell" style={{ padding: '8px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>**Regenerate some**</div>
-  <div className="table-cell" style={{ padding: '8px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Edit specific test case descriptions → prompt rerun</div>
+  <div className="table-cell" style={{ padding: '8px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Edit specific test case descriptions  <Icon icon="arrow-right" size={12} /> prompt rerun</div>
   <div className="table-cell" style={{ padding: '8px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>**Regenerate all**</div>
-  <div className="table-cell" style={{ padding: '8px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Delete `testsprite_tests` folder → prompt rerun project tests</div>
+  <div className="table-cell" style={{ padding: '8px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Delete `testsprite_tests` folder  <Icon icon="arrow-right" size={12} /> prompt rerun project tests</div>
   <div className="table-cell" style={{ padding: '8px', fontSize: '14px' }}>**Add/import**</div>
-  <div className="table-cell" style={{ padding: '8px', fontSize: '14px' }}>Append new cases in test plan → rerun to generate code</div>
+  <div className="table-cell" style={{ padding: '8px', fontSize: '14px' }}>Append new cases in test plan  <Icon icon="arrow-right" size={12} /> rerun to generate code</div>
 </div>
 
 <Check>
